--- a/src/components/headerAndNavigation/mobileMenu/MobileMenuUnit.sass
+++ b/src/components/headerAndNavigation/mobileMenu/MobileMenuUnit.sass
@@ -3,7 +3,7 @@
 
 .MobileMenuUnit
   height: 30px
-  margin: 8px 0
+  margin: 8px 15px
   border-bottom: 1px solid colors.$divider-mobile-grey
 
   a
