--- a/src/components/headerAndNavigation/mobileMenu/MobileMenuList.sass
+++ b/src/components/headerAndNavigation/mobileMenu/MobileMenuList.sass
@@ -1,3 +1,5 @@
+@use "../../../styles/colors"
+
 .MobileMenuList
   position: absolute
   top: 40px
@@ -6,4 +8,14 @@
   right: 0
   display: flex
   flex-direction: column
-  padding: 16px 15px
+  padding-top: 16px
+
+  .footer
+    height: 56px
+    width: 100%
+    margin-top: auto
+    padding-left: 15px
+    background-color: colors.$background-grey
+    display: flex
+    align-items: center
+    justify-content: start
